# necrofarmer

./: .gitignore  README.md  dump.json  dump_2.json  export.sh  generated_code.md  main.py  ninepatch.py  pyproject.toml  pytmx_experiment.py  requirements.txt  tardigrade_main.py  tmp.py  tmp_collide.py  tmp_fps.py  tmp_selectbox_rect.py  tmp_soup.py  tmp_ui.py  tmp_ui_2.py  tst.py
.cache/clangd/index/: simple_bt.cpp.EB75B4D97440A91F.idx  simple_bt.h.2D2A4EB79C321CF8.idx  simple_bt.h.58F400DB2AE951AE.idx  simple_run.cpp.8BC411295997AB30.idx
art/: buildings.aseprite  ui_spritesheet.aseprite
art/src/: buildings.aseprite  logo_pixel.aseprite  logo_pixel_2.aseprite  tst_tiles.aseprite  ui_spritesheet.aseprite
art/src/reference/: wc2_general.aseprite
art/tmx/: another_island.tmx  floating_island.tmx  tst_map.tmx  tst_square_map.tmx
art/tsx/: ground_square.tsx  sprites_3_3.tsx  spritesheet.tsx  tiles.tsx  tst_squares.tsx  tst_tiles.tsx
docs/: behaviortree.md
game_scripts/: big_tile.py  commander.py  context_panel.py  debug_menu.py  entity_tilemap.py  game_tilemap.py  game_ui.py  group_server.py  sawmill.py  selectable.py  star.py  stockpile.py  tardigrade.py  thopter.py  tile_entities.py  whiteboard.py  world_tilemap.py
game_scripts/bigtiles/: bigtile.py  bigtiles.py
game_scripts/ui/: context_panel.py  debug_menu.py  game_ui.py  main_ui.py
legacy/: global_blackboard.py  main.py  skeleton.py  world_tilemap.py
necrofarmer.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
scripts/: astar_server  async_runner.py  camera.py  custom_sprites.py  custom_ui.py  entities.py  game.py  global_blackboard.py  image_server.py  maze.py  player.py  skeleton.py  tilemap.py  tmp.py  ui.py  ui_necro.py  ui_shim.py  utils.py
scripts/behaviortree_py/: base_nodes.py  behaviortree.py  demo_script.py  dummy_nodes.py  factory.py  nodes.py  util_pygame.py
scripts/behaviortree_py/demo_trees/: dummy_tree.xml  fallback_tree.xml  late_tree.xml  some_tree.xml
simple_bt/: CMakeLists.txt
simple_bt/include/: simple_bt.h
simple_bt/src/: simple_bt.cpp  simple_bt.h  simple_run.cpp
simple_bt/trees/: carrying_behavior.xml  claim_behavior.xml  fallback_tree.xml  skeleton.json  skeleton.xml
theme/: buttons.json  buttons_generated.json  generate_json.py  proto.json  theme.json
tilemaps/: 1_1_flat.tsx  Slice 1.tsx  Slice 2.tsx  Slice 3.tsx  Slice 4.tsx  Slice 5.tsx  another_island.tmx  dictionary.tmx  down.tsx  left.tsx  right.tsx  sprites_1_1.tsx  sprites_2_2.tsx  sprites_3_3.tsx  tile_entities.tmx  tiles.tsx  tmp.tmx  up.tsx
trees/: ornithopter.xml  success_tree.xml
